--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section class="options">
             <!-- Option 1: Materials Calculator -->
             <a href="#" class="option option-materials" onclick="goToMaterialsCalculator(); return false;">
-                <img src="Pictures/materials-icon.png" alt="Materials Calculator">
+                <img src="Pictures/materials-icon.png" alt="Materialstest Calculator">
                 <h2>Materials Calculator</h2>
             </a>
             
