--- a/material-calculator.html
+++ b/material-calculator.html
@@ -61,19 +61,19 @@
     <div class="summary-box">
         <h2>Summary</h2>
         <p>
-            <img src="Materials\Leather\LegendaryL.png" alt="Leather" class="material-icon">
+            <img src="Materials\leather\LegendaryL.png" alt="Leather" class="material-icon">
             Leather: <span id="leather-sum">0</span>
         </p>
         <p>
-            <img src="Materials\Iron-Ore\LegendaryI.png" alt="Iron Ore" class="material-icon">
+            <img src="Materials\iron-ore\LegendaryI.png" alt="Iron Ore" class="material-icon">
             Iron Ore: <span id="iron-ore-sum">0</span>
         </p>
         <p>
-            <img src="Materials\Boxes\LegendaryB.png" alt="Boxes" class="material-icon">
+            <img src="Materials\boxes\LegendaryB.png" alt="Boxes" class="material-icon">
             Boxes: <span id="boxes-sum">0</span>
         </p>
         <p>
-            <img src="Materials\Ebony\LegendaryE.png" alt="Ebony" class="material-icon">
+            <img src="Materials\ebony\LegendaryE.png" alt="Ebony" class="material-icon">
             Ebony: <span id="ebony-sum">0</span>
         </p>
         <hr>
