--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Web App</title>
+    <title>ROK Calculator</title>
     <link rel="stylesheet" type="text/css" href="index.css">
     <script src="indexjs.js"></script>
 </head>
